data/collection/fixes/descriptions/scala/scala-7873
Discussion at https://groups.google.com/d/msg/scala-internals/6vemF4hOA9A/tsouPjHDO_AJ

```scala
scala> trait Foo { def foo: Option[String] }
defined trait Foo

scala> trait Bar extends Foo { def foo = Some("bar") }
defined trait Bar

scala> trait Baz extends Bar { override def foo: Option[String] = Some("baz") }
<console>:9: error: overriding method foo in trait Bar of type => Some[String];
 method foo has incompatible type
       trait Baz extends Bar { override def foo: Option[String] = Some("baz") }
                                            ^
```